Fixing item and subgroup width when collapsed, as specified in issue #61

--- a/sass/px-app-nav-subgroup.scss
+++ b/sass/px-app-nav-subgroup.scss
@@ -33,6 +33,10 @@
   height: auto;
 }
 
+:host([collapsed]) {
+  width: calculateRem(350px);
+}
+
 .app-nav-subgroup__dropdown {
   height: 0px;
   overflow: hidden;
